[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemys/soldier_crab/soldier_crab.gd" type="Script" id=1]
[ext_resource path="res://enemys/assets/explosion1.png" type="Texture" id=2]
[ext_resource path="res://enemys/assets/enemy_appearance.png" type="Texture" id=3]
[ext_resource path="res://utils/timers/random_timer/random_timer.tscn" type="PackedScene" id=4]
[ext_resource path="res://helpers/ASCII_states.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

radius = 5.94937

[sub_resource type="Animation" id=2]

tracks/0/type = "value"
tracks/0/path = NodePath("sprite_dead:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "free"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2048 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ASCIIMark:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.258824, 0.258824, 0.258824, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("sprite_dead:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 6 ]
}

[sub_resource type="Animation" id=3]

resource_name = "setup"
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_dead:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ASCIIMark:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]

radius = 6.889

[node name="soldier_crab" type="KinematicBody2D"]
collision_layer = 2048
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite_dead" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
hframes = 7

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="bullet_spawner" type="Position2D" parent="."]
position = Vector2( 55, 0 )

[node name="controlAnim" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 2 )
anims/setup = SubResource( 3 )

[node name="random_timer" parent="." instance=ExtResource( 4 )]
autostart = true
min_interval = 0.9
max_interval = 1.5

[node name="ASCIIMark" type="Sprite" parent="."]
texture = ExtResource( 5 )
vframes = 8
hframes = 16
frame = 64

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[connection signal="timeout" from="random_timer" to="." method="_on_random_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
